--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project implements a Botkit + Webex Teams adapter bot, based on the [generator-botkit](https://www.npmjs.com/package/generator-botkit) Yoeman template, providing a few extra good-practice features, plus several interesting samples:",
   "main": "bot.js",
   "dependencies": {
+    "axios": "^0.21.0",
     "botbuilder-adapter-webex": "^1.0.9",
     "botbuilder-storage-mongodb": "^1.0.4",
     "botbuilder-storage-redis": "^1.0.10",
